--- a/classicoFrontend/package.json
+++ b/classicoFrontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "classicofrontend",
+  "name": "my_ecommerce_website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,20 +11,29 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.23.5",
+    "i18next": "^25.3.2",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0",
-    "tailwindcss": "^4.1.11"
+    "react-i18next": "^15.6.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.2",
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
+    "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "globals": "^16.2.0",
+    "vite": "^7.0.0"
   }
 }
